--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "my-nuxt-layer",
+  "name": "@atlasconsulting/nuxt-bedita-app-layer",
   "type": "module",
   "version": "0.0.1",
+  "description": "Nuxt layer for BEdita apps",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/atlasconsulting/nuxt-bedita-app-layer.git"
+  },
+  "license": "MIT",
   "main": "./nuxt.config.ts",
   "scripts": {
     "dev": "nuxi dev .playground",
@@ -9,12 +15,19 @@
     "build": "nuxt build .playground",
     "generate": "nuxt generate .playground",
     "preview": "nuxt preview .playground",
-    "lint": "eslint ."
+    "release:patch": "npm run lint && npm run prepack && changelogen --release --patch --push && npm publish --access public",
+    "release:minor": "npm run lint && npm run prepack && changelogen --release --minor --push && npm publish --access public",
+    "release:major": "npm run lint && npm run prepack && changelogen --release --major --push && npm publish --access public",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
+  },
+  "dependencies": {
+    "@atlasconsulting/nuxt-bedita": "^0.4.1",
+    "@nuxtjs/tailwindcss": "^6.12.2"
   },
   "devDependencies": {
-    "@atlasconsulting/nuxt-bedita": "^0.4.1",
     "@nuxt/eslint": "latest",
-    "@nuxtjs/tailwindcss": "^6.12.2",
+    "changelogen": "^0.5.7",
     "eslint": "^9.16.0",
     "nuxt": "^3.14.1592",
     "typescript": "^5.7.2",
