--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -36,5 +36,8 @@ jobs:
       - name: Install
         run: npm install
 
+      - name: Prepare
+        run: npm run dev:prepare
+
       - name: Lint
         run: npm run lint
